<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 Brian Muramatsu

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>



    <string name="account_app_storage">App storage</string>
    <string name="account_type">com.btmura.android.reddit.account</string>
    <string name="add_account_fragment_title">Add Account</string>
    <string name="add_account">Add account</string>
    <string name="add_subreddit">Add subreddit</string>
    <string name="add_subreddits">Add subreddits</string>
    <string name="app_name">falling for reddit</string>
    <string name="authority_accounts">com.btmura.android.reddit.provider.accounts</string>
    <string name="authority_subreddits">com.btmura.android.reddit.provider.subreddits</string>
    <string name="authority_things">com.btmura.android.reddit.provider.things</string>
    <string name="captcha_image">Captcha image</string>
    <string name="captcha_title">Are you a robot?</string>
    <string name="compose_add_account">Add account</string>
    <string name="compose_tab_message">Message</string>
    <string name="compose_tab_post">Post</string>
    <string name="compose_tab_comment">Comment</string>
    <string name="compose_title_edit_comment">Edit comment</string>
    <string name="compose_title_edit_post">Edit post</string>
    <string name="compose_title_message">New message</string>
    <string name="compose_title_post">New post</string>
    <string name="compose_title_reply">Reply to %s</string>
    <string name="compose_message_reply_title">re: %s</string>
    <string name="compose_link">LINK</string>
    <string name="compose_text">TEXT</string>
    <string name="content_browser">Content providers</string>
    <string name="content_desc_header">Header</string>
    <string name="content_desc_new_messages">New messages</string>
    <string name="content_desc_visit">Visit</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="empty_accounts">You have no accounts.</string>
    <string name="empty_list">Nothing to see here…</string>
    <string name="error">Something went wrong…</string>
    <string name="error_account_required">You need an account to do this…</string>
    <string name="error_adding_account">Couldn\'t add account…</string>
    <string name="error_bad_access_token">Reddit returned an invalid access token… Try again?</string>
    <string name="error_blank_field">This field cannot be blank…</string>
    <string name="error_initializing_account">Couldn\'t initialize account…</string>
    <string name="error_io">Technical difficulties. Try again?</string>
    <string name="filter_category">Filters</string>
    <string name="filter_comments_best">best</string>
    <string name="filter_comments_controversial">controversial</string>
    <string name="filter_comments_hot">hot</string>
    <string name="filter_comments_new">new</string>
    <string name="filter_comments_old">old</string>
    <string name="filter_comments_top">top</string>
    <string name="filter_message_inbox">inbox</string>
    <string name="filter_message_unread">unread</string>
    <string name="filter_message_sent">sent</string>
    <string name="filter_profile_overview">overview</string>
    <string name="filter_profile_comments">comments</string>
    <string name="filter_profile_submitted">submitted</string>
    <string name="filter_profile_upvoted">upvoted</string>
    <string name="filter_profile_downvoted">downvoted</string>
    <string name="filter_profile_hidden">hidden</string>
    <string name="filter_profile_saved">saved</string>
    <string name="filter_search_comments">comments</string>
    <string name="filter_search_hot">hot</string>
    <string name="filter_search_new">new</string>
    <string name="filter_search_relevance">relevance</string>
    <string name="filter_search_top">top</string>
    <string name="filter_subreddit_controversial">controversial</string>
    <string name="filter_subreddit_hot">what\'s hot</string>
    <string name="filter_subreddit_new">new</string>
    <string name="filter_subreddit_rising">rising</string>
    <string name="filter_subreddit_top">top</string>
    <string name="front_page">front page</string>
    <string name="hint_captcha">Captcha</string>
    <string name="hint_comment">Comment</string>
    <string name="hint_message">Message</string>
    <string name="hint_password">Password</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_subreddit">Subreddit</string>
    <string name="hint_text_or_link">Text or link</string>
    <string name="hint_title">Title</string>
    <string name="hint_username">Username</string>
    <string name="karma_count">%1$,d</string>
    <string name="label_accounts">Accounts</string>
    <string name="loading">Loading…</string>
    <string name="login_fragment_title">Login</string>
    <string name="login_error">There was a problem: %1$s</string>
    <string name="login_importing_error">There was a problem importing your subreddits…</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_add">Add</string>
    <string name="menu_add_account">Add account</string>
    <string name="menu_add_subreddit">Add subreddit</string>
    <string name="menu_app_info">App info</string>
    <string name="menu_author">Author</string>
    <string name="menu_comments">View comments</string>
    <string name="menu_copy_url">Copy URL</string>
    <string name="menu_debug">Debug</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_hide">Hide</string>
    <string name="menu_link">View link</string>
    <string name="menu_new_comment">New comment</string>
    <string name="menu_new_message">New message</string>
    <string name="menu_new_post">New post</string>
    <string name="menu_open">Open</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_refresh_comments">Refresh comments</string>
    <string name="menu_reply">Reply</string>
    <string name="menu_save">Save</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_sort_comments">Sort comments</string>
    <string name="menu_sort_results">Sort results</string>
    <string name="menu_subreddit">/r/%1$s</string>
    <string name="menu_submit">Submit</string>
    <string name="menu_switch_themes">Switch themes</string>
    <string name="menu_sync_settings">Sync settings</string>
    <string name="menu_unhide">Unhide</string>
    <string name="menu_unsave">Unsave</string>
    <string name="menu_user">/u/%1$s</string>
    <string name="nsfw">"NSFW"</string>
    <string name="place_messages">Messages</string>
    <string name="place_profile">Profile</string>
    <string name="place_saved">Saved</string>
    <string name="place_subreddits">Subreddits</string>
    <string name="provider_accounts">Accounts</string>
    <string name="provider_subreddits">Subreddits</string>
    <string name="provider_things">Things</string>
    <string name="reddit_error">Reddit says: %1$s</string>
    <string name="reddit_error_line">%1$s - %2$s</string>
    <string name="show_password">Show password</string>
    <string name="subreddits_category">Subreddits</string>
    <string name="subtitle_profile">profile</string>
    <string name="subtitle_messages">messages</string>
    <string name="tab_description">Description</string>
    <string name="tab_posts">Posts</string>
    <string name="tab_related">Related</string>
    <string name="tab_subreddits">Subreddits</string>
    <string name="view_table">View table</string>

</resources>