<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 Brian Muramatsu

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:orderInCategory="@integer/menu_order_thing" >
        <item
            android:id="@+id/menu_new_comment"
            android:icon="?attr/menu_add_icon"
            android:showAsAction="ifRoom"
            android:title="@string/menu_new_comment"
            android:visible="false"/>
        <item
            android:id="@+id/menu_saved"
            android:icon="?attr/menu_saved_icon"
            android:showAsAction="ifRoom"
            android:title="@string/menu_unsave"
            android:visible="false"/>
        <item
            android:id="@+id/menu_unsaved"
            android:icon="?attr/menu_unsaved_icon"
            android:showAsAction="ifRoom"
            android:title="@string/menu_save"
            android:visible="false"/>
        <item
            android:id="@+id/menu_share"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:showAsAction="ifRoom"
            android:title="@string/menu_share"
            android:visible="false"/>
        <item
            android:id="@+id/menu_link"
            android:icon="?attr/menu_link_icon"
            android:showAsAction="ifRoom"
            android:title="@string/menu_link"
            android:visible="false"/>
        <item
            android:id="@+id/menu_comments"
            android:icon="?attr/menu_comments_icon"
            android:showAsAction="ifRoom"
            android:title="@string/menu_comments"
            android:visible="false"/>
        <item
            android:id="@+id/menu_open"
            android:showAsAction="never"
            android:title="@string/menu_open"
            android:visible="false"/>
        <item
            android:id="@+id/menu_copy_url"
            android:showAsAction="never"
            android:title="@string/menu_copy_url"
            android:visible="false"/>
        <item
            android:id="@+id/menu_thing_add_subreddit"
            android:showAsAction="never"
            android:title="@string/menu_add_subreddit"/>
        <item
            android:id="@+id/menu_user"
            android:icon="?attr/menu_profile_icon"
            android:showAsAction="ifRoom"
            android:title="@string/menu_user"/>
        <item
            android:id="@+id/menu_thing_subreddit"
            android:icon="?attr/menu_about_icon"
            android:showAsAction="ifRoom"
            android:title="@string/menu_subreddit"/>
    </group>

</menu>