<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 Brian Muramatsu

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/account_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:paddingLeft="@dimen/spinner_padding"
        android:paddingTop="@dimen/padding" />

    <EditText
        android:id="@+id/subreddit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_marginTop="@dimen/element_padding"
        android:hint="@string/hint_subreddit"
        android:imeOptions="flagNoFullscreen"
        android:inputType="textNoSuggestions"
        android:singleLine="true" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_marginTop="@dimen/element_padding"
        android:hint="@string/hint_title"
        android:imeOptions="flagNoFullscreen"
        android:inputType="textNoSuggestions"
        android:singleLine="true" />

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:layout_marginTop="@dimen/element_padding"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/hint_text_or_link"
        android:imeOptions="flagNoFullscreen"
        android:inputType="textNoSuggestions" />

    <ViewStub
        android:id="@+id/button_bar_stub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout="@layout/ok_button_bar" />

</LinearLayout>